refactor: 高レベルAPIに置き換え